crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void uniffi_spoke_connect_fn_free_outboundsequence(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_constructor_outboundsequence_new(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_spoke_connect_fn_method_outboundsequence_allocate(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_connectresponderffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_connectresponderffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_connectresponderffi_close(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_invoke_tool(uint64_t ptr, RustBuffer capability_id, RustBuffer arguments_json, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_connectresponderffi_register_tool_handler(uint64_t ptr, RustBuffer capability_id, uint64_t handler, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_remote_manifest(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_remote_peer_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_session_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_state(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_loopbacktransport(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_loopbacktransport(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_loopbacktransport_close(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_loopbacktransport_recv(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_loopbacktransport_send(uint64_t ptr, RustBuffer envelope, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_loopbacktransportpair(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_loopbacktransportpair(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_method_loopbacktransportpair_client(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_method_loopbacktransportpair_server(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_multipeerrouterffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_multipeerrouterffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_host_capability_manifest(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_knowledge_entry(uint64_t ptr, RustBuffer entry_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_relation(uint64_t ptr, RustBuffer relation_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_invoke_tool(uint64_t ptr, RustBuffer capability_id, RustBuffer arguments_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_knowledge_entries(uint64_t ptr, RustBuffer scope_json, RustCallStatus *_Nonnull out_status
);