crates/spoke-connect/bindings/csharp/generated/spoke_connect.cs


    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_free_outboundsequence(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_constructor_outboundsequence_new(ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_method_outboundsequence_allocate(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_clone_connectresponderffi(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_free_connectresponderffi(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_method_connectresponderffi_close(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_invoke_tool(ulong @ptr,RustBuffer @capabilityId,RustBuffer @argumentsJson,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_method_connectresponderffi_register_tool_handler(ulong @ptr,RustBuffer @capabilityId,ulong @handler,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_remote_manifest(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_remote_peer_id(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_session_id(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_connectresponderffi_state(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_clone_loopbacktransport(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_free_loopbacktransport(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_method_loopbacktransport_close(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_loopbacktransport_recv(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_method_loopbacktransport_send(ulong @ptr,RustBuffer @envelope,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_clone_loopbacktransportpair(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_free_loopbacktransportpair(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_method_loopbacktransportpair_client(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_method_loopbacktransportpair_server(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_clone_multipeerrouterffi(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_free_multipeerrouterffi(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_host_capability_manifest(ulong @ptr,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_knowledge_entry(ulong @ptr,RustBuffer @entryId,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_get_relation(ulong @ptr,RustBuffer @relationId,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_invoke_tool(ulong @ptr,RustBuffer @capabilityId,RustBuffer @argumentsJson,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_spoke_connect_fn_method_multipeerrouterffi_list_knowledge_entries(ulong @ptr,RustBuffer @scopeJson,ref UniffiRustCallStatus _uniffi_out_err
    );
